--- a/style3.css
+++ b/style3.css
@@ -1,6 +1,7 @@
 body{
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-image: url(/assents/little-kid-playing.jpg); /*imagem como preenchimento de plano de fundo*/
+    backdrop-filter: blur(3px);
     background-repeat: no-repeat; 
     background-size:cover; /*Escala a imagem o máximo possível*/
     color: white;
@@ -25,6 +26,7 @@ body{
 }
 
 .profile-photo{
+    margin-top: 100px;
     width: 100%;
     height: auto; /*evita que a foto fique desproporcional*/
     border-radius: 50%;
@@ -33,12 +35,16 @@ body{
  
 .info{
     display: flex; /*tansformando todos os seus filhos diretos em flex itens.*/
+    text-align: center;
+    font-size: 18px;
     flex-direction: column;
     text-align: center;
     gap: 0.5rem;
 }
 
 .inicio_botao{
+    margin-top: 100px;
+    margin-left: 5%;
     padding: 10px;
     width:  200px;
     height:  50px;
@@ -79,6 +85,39 @@ body{
     border-style:hidden;
     background-color: rgb(0 0 0 / 35%);
 }
+
+
+.post1{
+    padding: 10rem;
+    border: 3px solid color(white);
+    background-image: url(assents/close-up-cute-child-portrait.jpg);
+    background-repeat: no-repeat;
+    background-size:cover;
+    border-radius: 15px;
+    border-style:hidden;
+}
+
+.post2{
+    padding: 10rem;
+    border: 3px solid color(white);
+    background-image: url(assents/school-girl-with-yellow-shirt-telling-secret.jpg);
+    background-repeat: no-repeat;
+    background-size:cover;
+    border-radius: 15px;
+    border-style:hidden;
+}
+
+.post3{
+    padding: 10rem;
+    border: 3px solid color(white);
+    background-image: url(assents/little-boy-having-occupational-therapy-session.jpg);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size:cover;
+    border-radius: 15px;
+    border-style:hidden;
+}
+
 
 .icones{
     display: flex;
