--- a/estilo.css
+++ b/estilo.css
@@ -133,11 +133,42 @@ p{
 /*QUEM SOMOS*/
 
 .quemsomos{
-    background-color: rgba(22, 135, 192, 0.7);
-    padding: 16% 0;
+
+    background-color: rgba(156, 248, 243);
+    padding: 8% 0;
 
 
 }
+
+#quemsomos{
+    text-align:right;
+    margin-right: 15%;
+}
+
+.textolateral{
+    display: flex;
+    flex-direction: row;
+    text-align:justify
+  
+}
+
+.quemsomosimg{
+    display: flex;
+    flex-direction: row;
+    max-height: 55rem;
+    margin-left: 5%;
+    
+}
+
+.apresentacao{
+    text-align: right;
+    margin-top: 5%;
+    margin-right: 10%;
+
+}
+
+
+/*PROGRAMA*/
 
 
 
