--- a/estilo.css
+++ b/estilo.css
@@ -197,7 +197,7 @@ p{
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin: 15%;
+    margin: 3% 15% 3% 15%;
     padding: 88px 0;
 }
 
