--- a/style3.css
+++ b/style3.css
@@ -270,8 +270,19 @@ h2{
 
     .sidebar {
         padding: 1rem;
+        background-color: rgba(224, 110, 163, 0.90);
+    }
+
+    .sidebar2 {
+        padding: 1rem;
         background-color: rgba(255, 111, 97, 0.85);
     }
+
+    .sidebar3 {
+        padding: 1rem;
+        background-color: rgba(6, 184, 78, 0.90);
+    }
+
 
     .profile-photo {
         margin-top: 50px;
@@ -314,7 +325,16 @@ h2{
 
     .sidebar {
         padding: 0.5rem;
-        background-color: rgba(255, 111, 97, 0.95);
+        background-color: rgba(224, 110, 163, 0.90);
+    }
+    .sidebar2{
+        padding: 0.5rem;
+        background-color: rgba(255, 111, 97, 0.90);
+    }
+    .sidebar3{
+        padding: 0.5rem;
+        background-color: rgba(6, 184, 78, 0.90);
+    }
     }
 
     .profile-photo {
