--- a/estilo.css
+++ b/estilo.css
@@ -362,6 +362,11 @@ strong{
         cursor: pointer;
         filter:invert(100%);
     }
+
+    .iconparceria{
+        flex-direction: row;
+        width: 30px;
+    }
 }
 
 @media (max-width: 480px) {
